исправления и добавление пакетов